# hackathon-covergo--livsync

./: .gitignore  README.md  TECHNICAL_WRITEUP.md  bump.config.ts  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/archive/workflows/: ci-pr.yml  ci.yml  deploy.yml  docker-api.yml  e2e.yml  lint.yml  lint_ansible.yml  pull-request.yml  render-trigger.yml  render.yml  vercel-preview-web.yml  vercel-prod-web.yml
.github/instructions/: nx.instructions.md
apps/api/: package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/dependencies/: auth.py  calendar.py  config.py  langchain.py  supabase.py  user_profile.py
apps/api/app/models/: calendar.py  health_models.py  langchain_models.py  user.py
apps/api/app/routes/: health.py
apps/api/app/utils/: event_poller.py  event_suggestions.json  mock_health_data_cache.json  random_health_data.py  timestamp.py
apps/api/http/: api.rest
apps/web/: eslint.config.mjs  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AISuggestionPanel.tsx  ActivityCard.tsx  BottomNav.tsx  ChatInterface.tsx  FloatingChatButton.tsx  Header.tsx  HealthMetricCard.tsx  MenuPanel.tsx  NotificationPanel.tsx  VoiceInput.tsx  icons.tsx  navbar.tsx  theme-switch.tsx
apps/web/src/config/: site.ts
apps/web/src/hooks/: use-user.ts
apps/web/src/layouts/: default.tsx
apps/web/src/lib/: utils.ts
apps/web/supabase/: config.toml
(+28 files in other folders)
